--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
