--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -3,6 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
@@ -37,4 +44,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
+    implementation "com.kakao.sdk:v2-user:2.0.1"
 }
