--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
 
     implementation "com.kakao.sdk:v2-user:2.0.1"
 
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 }
