--- a/WeekFlex/app/src/main/AndroidManifest.xml
+++ b/WeekFlex/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".Activity.CompleteMakeRoutineActivity"></activity>
+        <activity android:name=".Activity.InsertRoutineNameActivity" />
+        <activity android:name=".Activity.AddTodoActivity" />
+        <activity android:name=".Activity.AddRoutineActivity" />
         <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -26,6 +29,7 @@
                     android:scheme="kakaoa6e7d1dfcdab3e23056bbced8c2e7097" />
             </intent-filter>
         </activity>
+
         <activity android:name=".Activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
