--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,5 +50,11 @@ dependencies {
     implementation "com.kakao.sdk:v2-user:2.0.1"
 
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    implementation 'com.google.android.material:material:1.2.1'
+    //implementation 'com.github.emkayDauda:ColorSlider:0.1.0'
+    //implementation "dev.sasikanth:colorsheet:1.0.1"
+
+
 
 }
