--- a/WeekFlex/build.gradle
+++ b/WeekFlex/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +21,8 @@ allprojects {
         jcenter()
         /*카카오*/
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+        /*color picker*/
+        maven { url "https://www.jitpack.io" }
     }
 }
 
