--- a/WeekFlex/app/src/main/AndroidManifest.xml
+++ b/WeekFlex/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity android:name=".Activity.CompleteMakeRoutineActivity"></activity>
         <activity android:name=".Activity.InsertRoutineNameActivity" />
         <activity android:name=".Activity.AddTodoActivity" ></activity>
-        <activity android:name=".Activity.AddRoutineActivity" />
+        <activity android:name=".Activity.AddRoutineActivity">
+        </activity>
         <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
