#25 Android Swipe Layout 적용 후 스와이프 후 버튼 클릭하면 로그 출력

--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     //implementation 'com.github.emkayDauda:ColorSlider:0.1.0'
     //implementation "dev.sasikanth:colorsheet:1.0.1"
 
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 
 
 }
