루틴 만들기 페이지 요일 추가 및 루틴 최종 점검 페이지 뷰 추가 & 연결

--- a/WeekFlex/app/src/main/AndroidManifest.xml
+++ b/WeekFlex/app/src/main/AndroidManifest.xml
@@ -14,19 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.AddCategory"></activity>
-        <activity android:name=".Activity.CompleteMakeRoutineActivity"
-            android:windowSoftInputMode="stateAlwaysHidden">
-        </activity>
+        <activity android:name=".Activity.RoutineFinalCheckActivity"></activity>
+        <activity android:name=".Activity.AddCategory" />
+        <activity
+            android:name=".Activity.CompleteMakeRoutineActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity android:name=".Activity.InsertRoutineNameActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".Activity.AddTodoActivity" ></activity>
-        <activity android:name=".Activity.AddRoutineActivity"/>
+        <activity android:name=".Activity.AddTodoActivity" />
+        <activity android:name=".Activity.AddRoutineActivity" />
         <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -39,13 +35,14 @@
                     android:scheme="kakaoa6e7d1dfcdab3e23056bbced8c2e7097" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".Activity.LoginActivity">
-        </activity>
-        <activity android:name=".Activity.SplashActivity">
-        </activity>
+        <activity android:name=".Activity.LoginActivity"></activity>
+        <activity android:name=".Activity.SplashActivity"></activity>
         <activity android:name=".Activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
