--- a/WeekFlex/app/src/main/AndroidManifest.xml
+++ b/WeekFlex/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.RoutineFinalCheckActivity"></activity>
+        <activity android:name=".Activity.RoutineFinalCheckActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity android:name=".Activity.AddCategory" />
         <activity
             android:name=".Activity.CompleteMakeRoutineActivity"
