--- a/WeekFlex/app/build.gradle
+++ b/WeekFlex/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
 
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 
-
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
 }
