--- a/WeekFlex/build.gradle
+++ b/WeekFlex/build.gradle
@@ -15,6 +15,15 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "9.0.0"
+}
+
+repositories {
+    // Required to download KtLint
+    mavenCentral()
+}
+
 allprojects {
     repositories {
         google()
